--- a/_studies/2021-12-28-10.1111_bjh.18005.md
+++ b/_studies/2021-12-28-10.1111_bjh.18005.md
@@ -5,12 +5,12 @@ authors:       'Smith, S, Chandler, C, Brereton, A'
 status:        default
 en:
   subtitle:    'Life-changing consequences of vaccine-induced immune-mediated thrombosis with thrombocytopenia'
-  description: 'Background: Understanding the clinical course and short-term outcomes of suspected myocarditis following COVID-19 vaccination has important public health implications in the decision to vaccinate youth. Results: We report on 139 adolescents and young adults with 140 episodes of suspected myocarditis (49 confirmed, 91 probable) at 26 centers. Most patients were male (N=126, 90.6%) and White (N=92, 66.2%); 29 (20.9%) were Hispanic; and median age was 15.8 years (range 12.1-20.3, IQR 14.5-17.0). Suspected myocarditis occurred in 136 patients (97.8%) following mRNA vaccine, with 131 (94.2%) following the Pfizer-BioNTech vaccine; 128 (91.4%) occurred after the 2nd dose. Symptoms started a median of 2 days (range 0-22, IQR 1-3) after vaccination. The most common symptom was chest pain (99.3%). Patients were treated with nonsteroidal anti-inflammatory drugs (81.3%), intravenous immunoglobulin (21.6%), glucocorticoids (21.6%), colchicine (7.9%) or no anti-inflammatory therapies (8.6%). Twenty-six patients (18.7%) were in the ICU, two were treated with inotropic/vasoactive support, and none required ECMO or died. Median hospital stay was 2 days (range 0-10, IQR 2-3). All patients had elevated troponin I (N=111, 8.12 ng/mL, IQR 3.50-15.90) or T (N=28, 0.61 ng/mL, IQR 0.25-1.30); 69.8% had abnormal electrocardiograms and/or arrythmias (7 with non-sustained ventricular tachycardia); and 18.7% had left ventricular ejection fraction (LVEF) <55% on echocardiogram. Of 97 patients who underwent cMRI at median 5 days (range 0-88, IQR 3-17) from symptom onset, 75 (77.3%) had abnormal findings: 74 (76.3%) had late gadolinium enhancement, 54 (55.7%) had myocardial edema, and 49 (50.5%) met Lake Louise criteria. Among 26 patients with LVEF <55% on echocardiogram, all with follow-up had normalized function (N=25). Conclusions: Most cases of suspected COVID-19 vaccine myocarditis occurring in persons <21 years have a mild clinical course with rapid resolution of symptoms. Abnormal findings on cMRI were frequent. Future studies should evaluate risk factors, mechanisms, and long-term outcomes.'
-  tags:        [p]
+  description: 'Several effective vaccines are now in use worldwide. The two-dose mRNA COVID-19 vaccines from Pfizer-BioNTech and Moderna have been approved for use in the UK and USA. The single-dose viral vector vaccine from Janssen is approved in the USA and the two-doses viral vector vaccine from Oxford-AstraZeneca is approved in the UK. Minor side effects included fever, headache, lethargy, myalgia, arthralgia, nausea, swelling and pain at the site of injection. Rare but serious side effects included anaphylactic reactions,myocarditis, Guillain–Barré Syndrome (GBS) and Thrombotic Thrombocytopenia Syndrome (TTS). Here, we report a case whose presentation to hospital coincided with electronic communication from the Medical Directors Office for the South East alerting hospital consultants of an emerging syndrome associated with low platelets, thromboses, elevated D-dimer and anti-platelet-factor 4 antibodies. More specific notification regarding the condition was released by the Medicines & Healthcare Products Regulatory Agency (MHRA) one week later. This reported a total of 79 cases of probable vaccine-induced immune-mediated thrombosis with thrombocytopenia (VITT) up to 31 March 2021, 44 cases of cerebral venous sinus thrombosis, 34 cases of other site venous thrombosis, and one case of arterial thrombosis subsequently described.'
+  tags:        [vaccines, thrombosis - arterial, thrombocytopenia, anticoagulation, anti-platelet factor 4]
 de:
-  subtitle:    'Klinischer Verdacht auf Myokarditis in zeitlichem Zusammenhang mit der COVID-19-Impfung bei Jugendlichen und jungen Erwachsenen'
-  description: 'Hintergrund: Das Verständnis des klinischen Verlaufs und der kurzfristigen Ergebnisse einer vermuteten Myokarditis nach einer COVID-19-Impfung hat wichtige Auswirkungen auf die öffentliche Gesundheit bei der Entscheidung über die Impfung von Jugendlichen. Ergebnisse: Wir berichten über 139 Jugendliche und junge Erwachsene mit 140 Episoden von vermuteter Myokarditis (49 bestätigt, 91 wahrscheinlich) in 26 Zentren. Die meisten Patienten waren männlich (N=126, 90,6 %) und weiß (N=92, 66,2 %); 29 (20,9 %) waren hispanischer Abstammung; das Durchschnittsalter betrug 15,8 Jahre (Spanne 12,1-20,3, IQR 14,5-17,0). Der Verdacht auf Myokarditis trat bei 136 Patienten (97,8 %) nach dem mRNA-Impfstoff auf, bei 131 (94,2 %) nach dem Impfstoff von Pfizer-BioNTech; 128 (91,4 %) traten nach der zweiten Dosis auf. Die Symptome traten im Median 2 Tage (Bereich 0-22, IQR 1-3) nach der Impfung auf. Das häufigste Symptom waren Brustschmerzen (99,3 %). Die Patienten wurden mit nichtsteroidalen Antiphlogistika (81,3 %), intravenösem Immunglobulin (21,6 %), Glukokortikoiden (21,6 %), Colchicin (7,9 %) oder keinen entzündungshemmenden Therapien (8,6 %) behandelt. Sechsundzwanzig Patienten (18,7 %) befanden sich auf der Intensivstation, zwei wurden mit inotroper/vasoaktiver Unterstützung behandelt, und keiner benötigte eine ECMO oder starb. Der mittlere Krankenhausaufenthalt betrug 2 Tage (Bereich 0-10, IQR 2-3). Alle Patienten wiesen erhöhte Troponin I- (N=111, 8,12 ng/ml, IQR 3,50-15,90) oder T-Werte (N=28, 0,61 ng/ml, IQR 0,25-1,30) auf; 69,8 % hatten anormale Elektrokardiogramme und/oder Arrythmien (7 mit nicht anhaltenden ventrikulären Tachykardien); und 18,7 % hatten eine linksventrikuläre Auswurffraktion (LVEF) <55 % im Echokardiogramm. Von 97 Patienten, die sich im Median 5 Tage (Spanne 0-88, IQR 3-17) nach Auftreten der Symptome einer cMRI unterzogen, wiesen 75 (77,3 %) abnorme Befunde auf: 74 (76,3 %) hatten ein spätes Gadolinium-Enhancement, 54 (55,7 %) ein Myokardödem und 49 (50,5 %) erfüllten die Lake-Louise-Kriterien. Von den 26 Patienten mit einer LVEF <55% im Echokardiogramm hatten sich alle bei der Nachuntersuchung normalisiert (N=25). Schlussfolgerungen: Die meisten Fälle von Verdacht auf COVID-19-Impfstoff-Myokarditis, die bei Personen unter 21 Jahren auftreten, haben einen milden klinischen Verlauf mit raschem Abklingen der Symptome. Abnorme Befunde im cMRI waren häufig. Künftige Studien sollten Risikofaktoren, Mechanismen und langfristige Ergebnisse untersuchen.' 
-  tags:        []
+  subtitle:    'Lebensverändernde Folgen einer impfstoffinduzierten immunvermittelten Thrombose mit Thrombozytopenie'
+  description: 'Mehrere wirksame Impfstoffe sind inzwischen weltweit im Einsatz. Die mRNA-COVID-19-Zweidosisimpfstoffe von Pfizer-BioNTech und Moderna wurden im Vereinigten Königreich und in den USA zugelassen. Der virale Vektorimpfstoff von Janssen mit einer Dosis ist in den USA zugelassen, und der virale Vektorimpfstoff von Oxford-AstraZeneca mit zwei Dosen ist im Vereinigten Königreich zugelassen. Zu den leichten Nebenwirkungen gehörten Fieber, Kopfschmerzen, Lethargie, Myalgie, Arthralgie, Übelkeit, Schwellungen und Schmerzen an der Injektionsstelle. Zu den seltenen, aber schwerwiegenden Nebenwirkungen gehören anaphylaktische Reaktionen, Myokarditis, Guillain-Barré-Syndrom (GBS) und thrombotisches Thrombozytopeniesyndrom (TTS). Hier berichten wir über einen Fall, dessen Einlieferung in ein Krankenhaus mit einer elektronischen Mitteilung des Medical Directors Office für den Südosten zusammenfiel, in der die Krankenhausärzte vor einem neu auftretenden Syndrom gewarnt wurden, das mit niedrigen Blutplättchen, Thrombosen, erhöhten D-Dimeren und Antiplättchenfaktor-4-Antikörpern einherging. Eine Woche später gab die Medicines & Healthcare Products Regulatory Agency (MHRA) eine spezifischere Meldung zu dieser Erkrankung heraus. Darin wurden bis zum 31. März 2021 insgesamt 79 Fälle von wahrscheinlicher impfstoffinduzierter immunvermittelter Thrombose mit Thrombozytopenie (VITT), 44 Fälle von zerebralen Venensinusthrombosen, 34 Fälle von Venenthrombosen an anderen Stellen und ein Fall von arterieller Thrombose beschrieben.' 
+  tags:        [Impfstoffe, Thrombose - arteriell, Thrombozytopenie, Antikoagulation, Antiplättchenfaktor 4]
 group:         'Vaccines'
 credit:        https://doi.org/10.1111/bjh.18005
 ---
